# Damhchuire

./: .gitignore  LOCAL_CHANGES.md  README.md  deploy.sh
chord_core/: Cargo.toml  build.rs
chord_core/asm/: asm.s
chord_core/src/: lib.rs  utils.rs
da-backend/: Dockerfile  Gemfile  README.md
da-backend/app/assets/stylesheets/: application.css
da-backend/app/controllers/: action_invocations_controller.rb  actions_controller.rb  application_controller.rb  credentials_controller.rb  git_controller.rb  home_controller.rb  reinvoking_rpc_controller.rb  sdk_catalog_controller.rb  tasks_controller.rb
da-backend/app/helpers/: application_helper.rb
da-backend/app/javascript/controllers/: action_form_controller.js  action_library_controller.js  connector_preview_controller.js  copy_code_controller.js  credential_form_controller.js  (+1 more)
da-backend/app/models/: action.rb  action_invocation.rb  credential.rb
da-backend/app/services/: da_task_emitter.rb  git.rb  sdk_generator.rb
da-backend/config/: application.rb  credentials.yml.enc  deploy.yml  routes.rb
da-backend/config/environments/: development.rb
da-backend/config/initializers/: active_record_encryption.rb  event_handlers.rb  solana.rb
da-backend/db/: schema.rb  seeds.rb
da-backend/db/migrate/: 20260221174215_create_credentials.rb  20260221230000_create_actions.rb  20260221230100_create_action_invocations.rb  20260222001000_add_body_template_to_actions.rb  20260222200000_add_uniqueness_to_credential_name.rb
da-backend/lib/tasks/: action_oracle.rake  solana.rake
da-backend/script/: github_action_runner.rb  test_github_get_commit_pulls.rb  test_github_get_issue.rb  test_github_get_issue_timeline.rb  test_github_get_user_gists.rb
da-backend/test/: test_helper.rb
da-backend/test/controllers/: actions_controller_credential_test.rb  sdk_catalog_controller_test.rb
da-backend/test/models/: credential_test.rb
da-sdk/: README.md  SAMPLE_USE.md
da-sdk/rust/: Cargo.toml
da-sdk/rust/src/: lib.rs
da-sdk/rust/tests/: generated_sdk_test.rs
da-solana/da-chain-side/: Anchor.toml
da-solana/da-chain-side/tests/: da-chain-side.ts  e2e-ai-chat.ts
docs/: E2E_TESTING_GUIDE.md
example-anchor-contract/: Anchor.toml  README.md
example-anchor-contract/programs/action-signal-client/: Cargo.toml
example-anchor-contract/programs/ai-chat-client/: Cargo.toml
example-anchor-contract/programs/ai-chat-client/src/: lib.rs
example-anchor-contract/programs/invoice-processor/: Cargo.toml
example-anchor-contract/programs/invoice-processor/src/: lib.rs
example-anchor-contract/programs/minimal-action-client/: Cargo.toml
example-anchor-contract/programs/minimal-action-client/src/: lib.rs
example-anchor-contract/tests/: e2e-invoice-processor.ts
invoke_on_chain_program/: Cargo.toml
invoke_on_chain_program/src/: main.rs
on_chain_program/: Cargo.toml  dump_solana_bytecode.sh
on_chain_program/src/: lib.rs
reinvoking_runner/: Cargo.toml  run.sh
reinvoking_runner/src/: main.rs
script/: setup-macos.sh
test_solana_program/: Cargo.toml
test_solana_program/src/: main.rs
(+24 files in other folders)
