[package]
name = "damhchuire-sdk"
version = "0.1.0"
edition = "2021"
description = "Generated Rust SDK for Damhchuire action oracle"
license = "MIT"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anchor-lang = "0.32.1"
