[package]
name = "invoice-processor"
version = "0.1.0"
description = "Anchor contract that processes invoices via AI oracle and pays out SOL"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "invoice_processor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "damhchuire-sdk/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
damhchuire-sdk = { path = "../../../da-sdk/rust", features = ["anchor"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
