[package]
name = "minimal-action-client"
version = "0.1.0"
description = "Minimal Anchor contract that emits a predefined Damhchuire action"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "minimal_action_client"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "damhchuire-sdk/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
damhchuire-sdk = { path = "../../../da-sdk/rust", features = ["anchor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
